--- a/deploy/vote/deployment.yaml
+++ b/deploy/vote/deployment.yaml
@@ -18,6 +18,6 @@ spec:
         app: vote
     spec:
       containers:
-      - image: schoolofdevops/vote:v4aaa
+      - image: schoolofdevops/vote:v4
         name: vote
         resources: {}
