deployment for redis corrected

--- a/deploy/redis/deployment.yaml
+++ b/deploy/redis/deployment.yaml
@@ -18,6 +18,7 @@ spec:
         app: redis
     spec:
       containers:
-      - image: redis:apline
+      - image: redis:alpine
         name: redis
         resources: {}
+status: {}
