--- a/deploy/redis/dev/kustomization.yaml
+++ b/deploy/redis/dev/kustomization.yaml
@@ -7,7 +7,7 @@ commonLabels:
   project: instavote
   env: dev
 
-commonAnotations:
+commonAnnotations:
   supported-by: "me@example.com"
 
 namespace: instavote
